wip: multiple frame draws on same image